# rs-clickhouse

./: Cargo.toml  README.md  TEST_TAGS.md  tarpaulin.toml
benches/: benchmarks.rs
coverage/: cobertura.xml  tarpaulin-report.html
examples/: basic_usage.rs
src/: error.rs  lib.rs
src/client/: circuit_breaker.rs  connection.rs  grpc.rs  load_balancer.rs  metrics.rs  mod.rs  options.rs  pool.rs  query.rs  retry.rs
src/compression/: mod.rs
src/protocol/: client_cancel.rs  client_data.rs  client_hello.rs  client_ping.rs  client_query.rs  constants.rs  mod.rs  server_data.rs  server_end_of_stream.rs  server_exception.rs  server_extremes.rs  server_hello.rs  server_log.rs  server_pong.rs  server_profile_info.rs  server_progress.rs  server_totals.rs  version_negotiation.rs
src/types/: complex.rs  datetime.rs  decimal.rs  enum_types.rs  fixed_string.rs  geometric.rs  lowcardinality.rs  mod.rs  network.rs  numeric.rs  serde_impls.rs  string.rs
tests/: README.md  advanced_features_tests.rs  coverage_tests.rs  grpc_tests.rs  integration_tests.rs  run_tests.sh  unit_tests.rs
tests/common/: mod.rs
