[package]
name = "clickhouse-rs"
version = "0.1.0"
edition = "2021"
authors = ["Thanos Vassilakis thanosv@gmail.com"]
description = "Rust client library for ClickHouse"
license = "Apache-2.0"
repository = "https://github.com/ClickHouse/clickhouse-rs"
keywords = ["clickhouse", "database", "client", "olap"]
categories = ["database", "api-bindings"]
readme = "README.md"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Network and protocol
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.0"
http = "0.2"
httparse = "1.0"

# GRPC support
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Compression
lz4 = "1.0"
zstd = "0.12"

# Serialization
bincode = "1.3"
postcard = "1.0"

# Big integer support
u256 = "0.1"
i256 = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional dependencies
openssl = { version = "0.10", optional = true }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.11"

[features]
default = ["native-tls"]
native-tls = ["dep:native-tls", "tokio-tungstenite/native-tls", "tungstenite/native-tls"]
rustls = ["dep:rustls", "tokio-tungstenite/rustls", "tungstenite/rustls"]
openssl = ["dep:openssl"]

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "clickhouse_rs"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"


